# rust-langgraph

./: .gitignore  Cargo.toml  LICENSE  README.md  build_frontend.sh  run_observability_demo.sh  state-flow.excalidraw
.github/agents/: rust-beat-mode.md
.github/instructions/: rust-intructions.md
.github/prompts/: remember.prompt.md
crates/langgraph-checkpoint/: Cargo.toml
crates/langgraph-checkpoint/src/: base.rs  lib.rs  memory.rs  postgres.rs  redis.rs  sqlite.rs
crates/langgraph-cli/: Cargo.toml
crates/langgraph-cli/src/: commands.rs  main.rs
crates/langgraph-core/: Cargo.toml
crates/langgraph-core/src/: channels.rs  constants.rs  errors.rs  graph.rs  lib.rs  managed.rs  types.rs
crates/langgraph-core/src/pregel/: engine.rs  merge.rs  mod.rs  scheduler.rs  task.rs
crates/langgraph-observability/: Cargo.toml  README.md
crates/langgraph-observability/examples/: simple_dashboard.rs
crates/langgraph-observability/migrations/: 001_initial.sql
crates/langgraph-observability/src/: config.rs  dashboard.rs  error.rs  events.rs  frontend.rs  lib.rs  main.rs  metrics.rs  prompt_analysis.rs  storage.rs  tracing.rs
crates/langgraph-observability/static/: dashboard.html  index.html  index_old.html  metrics.html  metrics_new.html  metrics_old.html  prompts.html  prompts_new.html  prompts_old.html  run_detail.html  run_detail_new.html  run_detail_old.html  runs_new.html  runs_old.html
crates/langgraph-prebuilt/: Cargo.toml
crates/langgraph-prebuilt/src/: agents.rs  lib.rs  prompts.rs  tools.rs
crates/langgraph-runtime/: Cargo.toml
crates/langgraph-runtime/src/: context.rs  executor.rs  lib.rs  runtime.rs
examples/: advanced_workflow.rs  basic_agent.rs  branching.rs  channels_api.rs  checkpoint.rs  configuration.rs  managed.rs  observability_demo.rs  recursion_limit.rs  reference_benchmark.rs  state_model.rs  streaming.rs
src/: lib.rs  lib_new.rs  prelude.rs
tests/: python_parity.rs
