[package]
name = "langgraph-checkpoint"
version = "0.1.0"
edition = "2021"
description = "Checkpointing and persistence for LangGraph"

[dependencies]
langgraph-core = { path = "../langgraph-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5.0"
tracing = "0.1"

# Optional database backends
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
], optional = true }
redis = { version = "0.24", optional = true }
flate2 = "1.1.2"
rmp-serde = "1.3.0"

[features]
default = ["memory"]
memory = []
sqlite = ["sqlx"]
postgres = ["sqlx"]
redis = ["dep:redis"]

[dev-dependencies]
tokio-test = "0.4"
