[package]
name = "langgraph-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for LangGraph"
license = "MIT"
repository = "https://github.com/yourusername/rust-langgraph"

[[bin]]
name = "langgraph"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
langgraph-core = { path = "../langgraph-core" }
langgraph-checkpoint = { path = "../langgraph-checkpoint" }
langgraph-runtime = { path = "../langgraph-runtime" }
langgraph-prebuilt = { path = "../langgraph-prebuilt" }
