[package]
name = "langgraph-core"
version = "0.1.0"
edition = "2021"
description = "Core graph orchestration and execution engine for LangGraph"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.16"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
crossbeam = "0.8"

[dev-dependencies]
tokio-test = "0.4"
