[package]
name = "langgraph-prebuilt"
version = "0.1.0"
edition = "2021"
description = "Prebuilt agent types and utilities for LangGraph"
license = "MIT"
repository = "https://github.com/yourusername/rust-langgraph"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
langgraph-core = { path = "../langgraph-core" }
langgraph-checkpoint = { path = "../langgraph-checkpoint" }
langgraph-runtime = { path = "../langgraph-runtime" }
langchain-rust = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.5"
